--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@vue/component-compiler-utils": "^3.0.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
+    "sass": "^1.23.0",
     "vue-template-compiler": "^2.6.10"
   },
   "alias": {
-    "vue" : "./node_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
