--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "chai": "^4.2.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "sass": "^1.23.0",
